parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD_COLUMN
    AGREGA_LA_COLUMNA
    AGRUPANDO_POR
    ALTER_TABLE
    BETWEEN
    BORRA_DE_LA
    CAMBIA_LA_TABLA
    CAST
    CLAVE_PRIMA
    CLAVE_REFERENTE
    COUNT
    CREATE_TABLE
    CREA_LA_TABLA
    DEFAULT
    DELETE_FROM
    DE_LA_TABLA
    DISTINCT
    DIVIDE
    DOT
    DROP_COLUMN
    DROP_TABLE
    ELIMINA_LA_COLUMNA
    EN_ESTO
    EXISTE
    EXISTS
    FOREIGN_KEY
    FROM
    GROUP_BY
    HAVING
    IN
    INSERT_INTO
    IS_NULL
    JOIN
    LIKE
    LIMIT
    LOS_DISTINTOS
    LOS_VALORES
    METE_EN
    MINUS
    NOT
    NOT_NULL
    NO_NULO
    ON
    OR
    ORDER_BY
    PLUS
    PRIMARY_KEY
    SELECT
    SET
    TIRA_LA_TABLA
    TRANSFORMA_A
    UNIQUE
    UPDATE
    VALUES
    WHERE_DEL_GROUP_BY
    Y

Grammar

Rule 0     S' -> query
Rule 1     query -> select_query
Rule 2     query -> insert_query
Rule 3     query -> update_query
Rule 4     query -> alter_query
Rule 5     query -> delete_query
Rule 6     alter_query -> CAMBIA LA TABLA table alter_action SEMICOLON
Rule 7     alter_action -> AGREGA LA COLUMNA IDENTIFIER datatype opt_constraints
Rule 8     alter_action -> ELIMINA LA COLUMNA IDENTIFIER
Rule 9     opt_constraints -> constraints
Rule 10    opt_constraints -> <empty>
Rule 11    constraints -> constraints constraint
Rule 12    constraints -> constraint
Rule 13    constraint -> NO NULO
Rule 14    constraint -> UNICO
Rule 15    constraint -> POR_DEFECTO value
Rule 16    datatype -> IDENTIFIER LPAREN NUMBER RPAREN
Rule 17    select_query -> TRAEME selection DE LA TABLA table opt_join_clause opt_where_clause opt_group_by_clause opt_having_clause opt_order_by_clause opt_limit_clause SEMICOLON
Rule 18    selection -> TODO
Rule 19    selection -> LOS DISTINTOS columns
Rule 20    selection -> CONTANDO LPAREN ASTERISK RPAREN
Rule 21    selection -> CONTANDO LPAREN TODO RPAREN
Rule 22    selection -> columns
Rule 23    opt_having_clause -> WHERE DEL GROUP BY condition
Rule 24    opt_having_clause -> <empty>
Rule 25    opt_join_clause -> MEZCLANDO table EN condition
Rule 26    opt_join_clause -> <empty>
Rule 27    columns -> column_list
Rule 28    column_list -> column_list COMMA column
Rule 29    column_list -> column
Rule 30    column -> IDENTIFIER
Rule 31    table -> IDENTIFIER
Rule 32    opt_where_clause -> DONDE condition
Rule 33    opt_where_clause -> <empty>
Rule 34    condition -> IDENTIFIER EQUALS value
Rule 35    condition -> IDENTIFIER GREATER value
Rule 36    condition -> IDENTIFIER LESS value
Rule 37    condition -> IDENTIFIER GREATER_EQUALS value
Rule 38    condition -> IDENTIFIER LESS_EQUALS value
Rule 39    condition -> IDENTIFIER NOT_EQUALS value
Rule 40    condition -> IDENTIFIER ENTRE value AND value
Rule 41    condition -> IDENTIFIER PARECIDO_A value
Rule 42    condition -> IDENTIFIER ES_NULO
Rule 43    condition -> CONTANDO LPAREN ASTERISK RPAREN GREATER NUMBER
Rule 44    value -> NUMBER
Rule 45    value -> STRING
Rule 46    value -> IDENTIFIER
Rule 47    opt_group_by_clause -> AGRUPANDO POR columns
Rule 48    opt_group_by_clause -> <empty>
Rule 49    opt_order_by_clause -> ORDENA_POR columns
Rule 50    opt_order_by_clause -> <empty>
Rule 51    opt_limit_clause -> COMO_MUCHO NUMBER
Rule 52    opt_limit_clause -> <empty>
Rule 53    insert_query -> METE EN table LPAREN columns RPAREN LOS VALORES LPAREN values RPAREN SEMICOLON
Rule 54    values -> values COMMA value
Rule 55    values -> value
Rule 56    update_query -> ACTUALIZA table SETEA assignments opt_where_clause SEMICOLON
Rule 57    assignments -> assignments COMMA assignment
Rule 58    assignments -> assignment
Rule 59    assignment -> IDENTIFIER EQUALS value
Rule 60    delete_query -> BORRA DE LA TABLA table opt_where_clause SEMICOLON

Terminals, with rules where they appear

ACTUALIZA            : 56
ADD_COLUMN           : 
AGREGA               : 7
AGREGA_LA_COLUMNA    : 
AGRUPANDO            : 47
AGRUPANDO_POR        : 
ALTER_TABLE          : 
AND                  : 40
ASTERISK             : 20 43
BETWEEN              : 
BORRA                : 60
BORRA_DE_LA          : 
BY                   : 23
CAMBIA               : 6
CAMBIA_LA_TABLA      : 
CAST                 : 
CLAVE_PRIMA          : 
CLAVE_REFERENTE      : 
COLUMNA              : 7 8
COMMA                : 28 54 57
COMO_MUCHO           : 51
CONTANDO             : 20 21 43
COUNT                : 
CREATE_TABLE         : 
CREA_LA_TABLA        : 
DE                   : 17 60
DEFAULT              : 
DEL                  : 23
DELETE_FROM          : 
DE_LA_TABLA          : 
DISTINCT             : 
DISTINTOS            : 19
DIVIDE               : 
DONDE                : 32
DOT                  : 
DROP_COLUMN          : 
DROP_TABLE           : 
ELIMINA              : 8
ELIMINA_LA_COLUMNA   : 
EN                   : 25 53
ENTRE                : 40
EN_ESTO              : 
EQUALS               : 34 59
ES_NULO              : 42
EXISTE               : 
EXISTS               : 
FOREIGN_KEY          : 
FROM                 : 
GREATER              : 35 43
GREATER_EQUALS       : 37
GROUP                : 23
GROUP_BY             : 
HAVING               : 
IDENTIFIER           : 7 8 16 30 31 34 35 36 37 38 39 40 41 42 46 59
IN                   : 
INSERT_INTO          : 
IS_NULL              : 
JOIN                 : 
LA                   : 6 7 8 17 60
LESS                 : 36
LESS_EQUALS          : 38
LIKE                 : 
LIMIT                : 
LOS                  : 19 53
LOS_DISTINTOS        : 
LOS_VALORES          : 
LPAREN               : 16 20 21 43 53 53
METE                 : 53
METE_EN              : 
MEZCLANDO            : 25
MINUS                : 
NO                   : 13
NOT                  : 
NOT_EQUALS           : 39
NOT_NULL             : 
NO_NULO              : 
NULO                 : 13
NUMBER               : 16 43 44 51
ON                   : 
OR                   : 
ORDENA_POR           : 49
ORDER_BY             : 
PARECIDO_A           : 41
PLUS                 : 
POR                  : 47
POR_DEFECTO          : 15
PRIMARY_KEY          : 
RPAREN               : 16 20 21 43 53 53
SELECT               : 
SEMICOLON            : 6 17 53 56 60
SET                  : 
SETEA                : 56
STRING               : 45
TABLA                : 6 17 60
TIRA_LA_TABLA        : 
TODO                 : 18 21
TRAEME               : 17
TRANSFORMA_A         : 
UNICO                : 14
UNIQUE               : 
UPDATE               : 
VALORES              : 53
VALUES               : 
WHERE                : 23
WHERE_DEL_GROUP_BY   : 
Y                    : 
error                : 

Nonterminals, with rules where they appear

alter_action         : 6
alter_query          : 4
assignment           : 57 58
assignments          : 56 57
column               : 28 29
column_list          : 27 28
columns              : 19 22 47 49 53
condition            : 23 25 32
constraint           : 11 12
constraints          : 9 11
datatype             : 7
delete_query         : 5
insert_query         : 2
opt_constraints      : 7
opt_group_by_clause  : 17
opt_having_clause    : 17
opt_join_clause      : 17
opt_limit_clause     : 17
opt_order_by_clause  : 17
opt_where_clause     : 17 56 60
query                : 0
select_query         : 1
selection            : 17
table                : 6 17 25 53 56 60
update_query         : 3
value                : 15 34 35 36 37 38 39 40 40 41 54 55 59
values               : 53 54

Parsing method: LALR

state 0

    (0) S' -> . query
    (1) query -> . select_query
    (2) query -> . insert_query
    (3) query -> . update_query
    (4) query -> . alter_query
    (5) query -> . delete_query
    (17) select_query -> . TRAEME selection DE LA TABLA table opt_join_clause opt_where_clause opt_group_by_clause opt_having_clause opt_order_by_clause opt_limit_clause SEMICOLON
    (53) insert_query -> . METE EN table LPAREN columns RPAREN LOS VALORES LPAREN values RPAREN SEMICOLON
    (56) update_query -> . ACTUALIZA table SETEA assignments opt_where_clause SEMICOLON
    (6) alter_query -> . CAMBIA LA TABLA table alter_action SEMICOLON
    (60) delete_query -> . BORRA DE LA TABLA table opt_where_clause SEMICOLON

    TRAEME          shift and go to state 7
    METE            shift and go to state 8
    ACTUALIZA       shift and go to state 9
    CAMBIA          shift and go to state 10
    BORRA           shift and go to state 11

    query                          shift and go to state 1
    select_query                   shift and go to state 2
    insert_query                   shift and go to state 3
    update_query                   shift and go to state 4
    alter_query                    shift and go to state 5
    delete_query                   shift and go to state 6

state 1

    (0) S' -> query .



state 2

    (1) query -> select_query .

    $end            reduce using rule 1 (query -> select_query .)


state 3

    (2) query -> insert_query .

    $end            reduce using rule 2 (query -> insert_query .)


state 4

    (3) query -> update_query .

    $end            reduce using rule 3 (query -> update_query .)


state 5

    (4) query -> alter_query .

    $end            reduce using rule 4 (query -> alter_query .)


state 6

    (5) query -> delete_query .

    $end            reduce using rule 5 (query -> delete_query .)


state 7

    (17) select_query -> TRAEME . selection DE LA TABLA table opt_join_clause opt_where_clause opt_group_by_clause opt_having_clause opt_order_by_clause opt_limit_clause SEMICOLON
    (18) selection -> . TODO
    (19) selection -> . LOS DISTINTOS columns
    (20) selection -> . CONTANDO LPAREN ASTERISK RPAREN
    (21) selection -> . CONTANDO LPAREN TODO RPAREN
    (22) selection -> . columns
    (27) columns -> . column_list
    (28) column_list -> . column_list COMMA column
    (29) column_list -> . column
    (30) column -> . IDENTIFIER

    TODO            shift and go to state 13
    LOS             shift and go to state 14
    CONTANDO        shift and go to state 16
    IDENTIFIER      shift and go to state 19

    selection                      shift and go to state 12
    columns                        shift and go to state 15
    column_list                    shift and go to state 17
    column                         shift and go to state 18

state 8

    (53) insert_query -> METE . EN table LPAREN columns RPAREN LOS VALORES LPAREN values RPAREN SEMICOLON

    EN              shift and go to state 20


state 9

    (56) update_query -> ACTUALIZA . table SETEA assignments opt_where_clause SEMICOLON
    (31) table -> . IDENTIFIER

    IDENTIFIER      shift and go to state 22

    table                          shift and go to state 21

state 10

    (6) alter_query -> CAMBIA . LA TABLA table alter_action SEMICOLON

    LA              shift and go to state 23


state 11

    (60) delete_query -> BORRA . DE LA TABLA table opt_where_clause SEMICOLON

    DE              shift and go to state 24


state 12

    (17) select_query -> TRAEME selection . DE LA TABLA table opt_join_clause opt_where_clause opt_group_by_clause opt_having_clause opt_order_by_clause opt_limit_clause SEMICOLON

    DE              shift and go to state 25


state 13

    (18) selection -> TODO .

    DE              reduce using rule 18 (selection -> TODO .)


state 14

    (19) selection -> LOS . DISTINTOS columns

    DISTINTOS       shift and go to state 26


state 15

    (22) selection -> columns .

    DE              reduce using rule 22 (selection -> columns .)


state 16

    (20) selection -> CONTANDO . LPAREN ASTERISK RPAREN
    (21) selection -> CONTANDO . LPAREN TODO RPAREN

    LPAREN          shift and go to state 27


state 17

    (27) columns -> column_list .
    (28) column_list -> column_list . COMMA column

    DE              reduce using rule 27 (columns -> column_list .)
    RPAREN          reduce using rule 27 (columns -> column_list .)
    WHERE           reduce using rule 27 (columns -> column_list .)
    ORDENA_POR      reduce using rule 27 (columns -> column_list .)
    COMO_MUCHO      reduce using rule 27 (columns -> column_list .)
    SEMICOLON       reduce using rule 27 (columns -> column_list .)
    COMMA           shift and go to state 28


state 18

    (29) column_list -> column .

    COMMA           reduce using rule 29 (column_list -> column .)
    DE              reduce using rule 29 (column_list -> column .)
    RPAREN          reduce using rule 29 (column_list -> column .)
    WHERE           reduce using rule 29 (column_list -> column .)
    ORDENA_POR      reduce using rule 29 (column_list -> column .)
    COMO_MUCHO      reduce using rule 29 (column_list -> column .)
    SEMICOLON       reduce using rule 29 (column_list -> column .)


state 19

    (30) column -> IDENTIFIER .

    COMMA           reduce using rule 30 (column -> IDENTIFIER .)
    DE              reduce using rule 30 (column -> IDENTIFIER .)
    RPAREN          reduce using rule 30 (column -> IDENTIFIER .)
    WHERE           reduce using rule 30 (column -> IDENTIFIER .)
    ORDENA_POR      reduce using rule 30 (column -> IDENTIFIER .)
    COMO_MUCHO      reduce using rule 30 (column -> IDENTIFIER .)
    SEMICOLON       reduce using rule 30 (column -> IDENTIFIER .)


state 20

    (53) insert_query -> METE EN . table LPAREN columns RPAREN LOS VALORES LPAREN values RPAREN SEMICOLON
    (31) table -> . IDENTIFIER

    IDENTIFIER      shift and go to state 22

    table                          shift and go to state 29

state 21

    (56) update_query -> ACTUALIZA table . SETEA assignments opt_where_clause SEMICOLON

    SETEA           shift and go to state 30


state 22

    (31) table -> IDENTIFIER .

    SETEA           reduce using rule 31 (table -> IDENTIFIER .)
    LPAREN          reduce using rule 31 (table -> IDENTIFIER .)
    AGREGA          reduce using rule 31 (table -> IDENTIFIER .)
    ELIMINA         reduce using rule 31 (table -> IDENTIFIER .)
    DONDE           reduce using rule 31 (table -> IDENTIFIER .)
    SEMICOLON       reduce using rule 31 (table -> IDENTIFIER .)
    MEZCLANDO       reduce using rule 31 (table -> IDENTIFIER .)
    AGRUPANDO       reduce using rule 31 (table -> IDENTIFIER .)
    WHERE           reduce using rule 31 (table -> IDENTIFIER .)
    ORDENA_POR      reduce using rule 31 (table -> IDENTIFIER .)
    COMO_MUCHO      reduce using rule 31 (table -> IDENTIFIER .)
    EN              reduce using rule 31 (table -> IDENTIFIER .)


state 23

    (6) alter_query -> CAMBIA LA . TABLA table alter_action SEMICOLON

    TABLA           shift and go to state 31


state 24

    (60) delete_query -> BORRA DE . LA TABLA table opt_where_clause SEMICOLON

    LA              shift and go to state 32


state 25

    (17) select_query -> TRAEME selection DE . LA TABLA table opt_join_clause opt_where_clause opt_group_by_clause opt_having_clause opt_order_by_clause opt_limit_clause SEMICOLON

    LA              shift and go to state 33


state 26

    (19) selection -> LOS DISTINTOS . columns
    (27) columns -> . column_list
    (28) column_list -> . column_list COMMA column
    (29) column_list -> . column
    (30) column -> . IDENTIFIER

    IDENTIFIER      shift and go to state 19

    columns                        shift and go to state 34
    column_list                    shift and go to state 17
    column                         shift and go to state 18

state 27

    (20) selection -> CONTANDO LPAREN . ASTERISK RPAREN
    (21) selection -> CONTANDO LPAREN . TODO RPAREN

    ASTERISK        shift and go to state 35
    TODO            shift and go to state 36


state 28

    (28) column_list -> column_list COMMA . column
    (30) column -> . IDENTIFIER

    IDENTIFIER      shift and go to state 19

    column                         shift and go to state 37

state 29

    (53) insert_query -> METE EN table . LPAREN columns RPAREN LOS VALORES LPAREN values RPAREN SEMICOLON

    LPAREN          shift and go to state 38


state 30

    (56) update_query -> ACTUALIZA table SETEA . assignments opt_where_clause SEMICOLON
    (57) assignments -> . assignments COMMA assignment
    (58) assignments -> . assignment
    (59) assignment -> . IDENTIFIER EQUALS value

    IDENTIFIER      shift and go to state 41

    assignments                    shift and go to state 39
    assignment                     shift and go to state 40

state 31

    (6) alter_query -> CAMBIA LA TABLA . table alter_action SEMICOLON
    (31) table -> . IDENTIFIER

    IDENTIFIER      shift and go to state 22

    table                          shift and go to state 42

state 32

    (60) delete_query -> BORRA DE LA . TABLA table opt_where_clause SEMICOLON

    TABLA           shift and go to state 43


state 33

    (17) select_query -> TRAEME selection DE LA . TABLA table opt_join_clause opt_where_clause opt_group_by_clause opt_having_clause opt_order_by_clause opt_limit_clause SEMICOLON

    TABLA           shift and go to state 44


state 34

    (19) selection -> LOS DISTINTOS columns .

    DE              reduce using rule 19 (selection -> LOS DISTINTOS columns .)


state 35

    (20) selection -> CONTANDO LPAREN ASTERISK . RPAREN

    RPAREN          shift and go to state 45


state 36

    (21) selection -> CONTANDO LPAREN TODO . RPAREN

    RPAREN          shift and go to state 46


state 37

    (28) column_list -> column_list COMMA column .

    COMMA           reduce using rule 28 (column_list -> column_list COMMA column .)
    DE              reduce using rule 28 (column_list -> column_list COMMA column .)
    RPAREN          reduce using rule 28 (column_list -> column_list COMMA column .)
    WHERE           reduce using rule 28 (column_list -> column_list COMMA column .)
    ORDENA_POR      reduce using rule 28 (column_list -> column_list COMMA column .)
    COMO_MUCHO      reduce using rule 28 (column_list -> column_list COMMA column .)
    SEMICOLON       reduce using rule 28 (column_list -> column_list COMMA column .)


state 38

    (53) insert_query -> METE EN table LPAREN . columns RPAREN LOS VALORES LPAREN values RPAREN SEMICOLON
    (27) columns -> . column_list
    (28) column_list -> . column_list COMMA column
    (29) column_list -> . column
    (30) column -> . IDENTIFIER

    IDENTIFIER      shift and go to state 19

    columns                        shift and go to state 47
    column_list                    shift and go to state 17
    column                         shift and go to state 18

state 39

    (56) update_query -> ACTUALIZA table SETEA assignments . opt_where_clause SEMICOLON
    (57) assignments -> assignments . COMMA assignment
    (32) opt_where_clause -> . DONDE condition
    (33) opt_where_clause -> .

    COMMA           shift and go to state 49
    DONDE           shift and go to state 50
    SEMICOLON       reduce using rule 33 (opt_where_clause -> .)

    opt_where_clause               shift and go to state 48

state 40

    (58) assignments -> assignment .

    COMMA           reduce using rule 58 (assignments -> assignment .)
    DONDE           reduce using rule 58 (assignments -> assignment .)
    SEMICOLON       reduce using rule 58 (assignments -> assignment .)


state 41

    (59) assignment -> IDENTIFIER . EQUALS value

    EQUALS          shift and go to state 51


state 42

    (6) alter_query -> CAMBIA LA TABLA table . alter_action SEMICOLON
    (7) alter_action -> . AGREGA LA COLUMNA IDENTIFIER datatype opt_constraints
    (8) alter_action -> . ELIMINA LA COLUMNA IDENTIFIER

    AGREGA          shift and go to state 53
    ELIMINA         shift and go to state 54

    alter_action                   shift and go to state 52

state 43

    (60) delete_query -> BORRA DE LA TABLA . table opt_where_clause SEMICOLON
    (31) table -> . IDENTIFIER

    IDENTIFIER      shift and go to state 22

    table                          shift and go to state 55

state 44

    (17) select_query -> TRAEME selection DE LA TABLA . table opt_join_clause opt_where_clause opt_group_by_clause opt_having_clause opt_order_by_clause opt_limit_clause SEMICOLON
    (31) table -> . IDENTIFIER

    IDENTIFIER      shift and go to state 22

    table                          shift and go to state 56

state 45

    (20) selection -> CONTANDO LPAREN ASTERISK RPAREN .

    DE              reduce using rule 20 (selection -> CONTANDO LPAREN ASTERISK RPAREN .)


state 46

    (21) selection -> CONTANDO LPAREN TODO RPAREN .

    DE              reduce using rule 21 (selection -> CONTANDO LPAREN TODO RPAREN .)


state 47

    (53) insert_query -> METE EN table LPAREN columns . RPAREN LOS VALORES LPAREN values RPAREN SEMICOLON

    RPAREN          shift and go to state 57


state 48

    (56) update_query -> ACTUALIZA table SETEA assignments opt_where_clause . SEMICOLON

    SEMICOLON       shift and go to state 58


state 49

    (57) assignments -> assignments COMMA . assignment
    (59) assignment -> . IDENTIFIER EQUALS value

    IDENTIFIER      shift and go to state 41

    assignment                     shift and go to state 59

state 50

    (32) opt_where_clause -> DONDE . condition
    (34) condition -> . IDENTIFIER EQUALS value
    (35) condition -> . IDENTIFIER GREATER value
    (36) condition -> . IDENTIFIER LESS value
    (37) condition -> . IDENTIFIER GREATER_EQUALS value
    (38) condition -> . IDENTIFIER LESS_EQUALS value
    (39) condition -> . IDENTIFIER NOT_EQUALS value
    (40) condition -> . IDENTIFIER ENTRE value AND value
    (41) condition -> . IDENTIFIER PARECIDO_A value
    (42) condition -> . IDENTIFIER ES_NULO
    (43) condition -> . CONTANDO LPAREN ASTERISK RPAREN GREATER NUMBER

    IDENTIFIER      shift and go to state 61
    CONTANDO        shift and go to state 62

    condition                      shift and go to state 60

state 51

    (59) assignment -> IDENTIFIER EQUALS . value
    (44) value -> . NUMBER
    (45) value -> . STRING
    (46) value -> . IDENTIFIER

    NUMBER          shift and go to state 65
    STRING          shift and go to state 66
    IDENTIFIER      shift and go to state 63

    value                          shift and go to state 64

state 52

    (6) alter_query -> CAMBIA LA TABLA table alter_action . SEMICOLON

    SEMICOLON       shift and go to state 67


state 53

    (7) alter_action -> AGREGA . LA COLUMNA IDENTIFIER datatype opt_constraints

    LA              shift and go to state 68


state 54

    (8) alter_action -> ELIMINA . LA COLUMNA IDENTIFIER

    LA              shift and go to state 69


state 55

    (60) delete_query -> BORRA DE LA TABLA table . opt_where_clause SEMICOLON
    (32) opt_where_clause -> . DONDE condition
    (33) opt_where_clause -> .

    DONDE           shift and go to state 50
    SEMICOLON       reduce using rule 33 (opt_where_clause -> .)

    opt_where_clause               shift and go to state 70

state 56

    (17) select_query -> TRAEME selection DE LA TABLA table . opt_join_clause opt_where_clause opt_group_by_clause opt_having_clause opt_order_by_clause opt_limit_clause SEMICOLON
    (25) opt_join_clause -> . MEZCLANDO table EN condition
    (26) opt_join_clause -> .

    MEZCLANDO       shift and go to state 72
    DONDE           reduce using rule 26 (opt_join_clause -> .)
    AGRUPANDO       reduce using rule 26 (opt_join_clause -> .)
    WHERE           reduce using rule 26 (opt_join_clause -> .)
    ORDENA_POR      reduce using rule 26 (opt_join_clause -> .)
    COMO_MUCHO      reduce using rule 26 (opt_join_clause -> .)
    SEMICOLON       reduce using rule 26 (opt_join_clause -> .)

    opt_join_clause                shift and go to state 71

state 57

    (53) insert_query -> METE EN table LPAREN columns RPAREN . LOS VALORES LPAREN values RPAREN SEMICOLON

    LOS             shift and go to state 73


state 58

    (56) update_query -> ACTUALIZA table SETEA assignments opt_where_clause SEMICOLON .

    $end            reduce using rule 56 (update_query -> ACTUALIZA table SETEA assignments opt_where_clause SEMICOLON .)


state 59

    (57) assignments -> assignments COMMA assignment .

    COMMA           reduce using rule 57 (assignments -> assignments COMMA assignment .)
    DONDE           reduce using rule 57 (assignments -> assignments COMMA assignment .)
    SEMICOLON       reduce using rule 57 (assignments -> assignments COMMA assignment .)


state 60

    (32) opt_where_clause -> DONDE condition .

    SEMICOLON       reduce using rule 32 (opt_where_clause -> DONDE condition .)
    AGRUPANDO       reduce using rule 32 (opt_where_clause -> DONDE condition .)
    WHERE           reduce using rule 32 (opt_where_clause -> DONDE condition .)
    ORDENA_POR      reduce using rule 32 (opt_where_clause -> DONDE condition .)
    COMO_MUCHO      reduce using rule 32 (opt_where_clause -> DONDE condition .)


state 61

    (34) condition -> IDENTIFIER . EQUALS value
    (35) condition -> IDENTIFIER . GREATER value
    (36) condition -> IDENTIFIER . LESS value
    (37) condition -> IDENTIFIER . GREATER_EQUALS value
    (38) condition -> IDENTIFIER . LESS_EQUALS value
    (39) condition -> IDENTIFIER . NOT_EQUALS value
    (40) condition -> IDENTIFIER . ENTRE value AND value
    (41) condition -> IDENTIFIER . PARECIDO_A value
    (42) condition -> IDENTIFIER . ES_NULO

    EQUALS          shift and go to state 74
    GREATER         shift and go to state 75
    LESS            shift and go to state 76
    GREATER_EQUALS  shift and go to state 77
    LESS_EQUALS     shift and go to state 78
    NOT_EQUALS      shift and go to state 79
    ENTRE           shift and go to state 80
    PARECIDO_A      shift and go to state 81
    ES_NULO         shift and go to state 82


state 62

    (43) condition -> CONTANDO . LPAREN ASTERISK RPAREN GREATER NUMBER

    LPAREN          shift and go to state 83


state 63

    (46) value -> IDENTIFIER .
